Bug 742154 - Work around media crashtest shutdown hang in cubeb_winmm.  r=cpearce